# portalview-main

./: .gitignore  CLAUDE.md  README.md  middleware.ts  next.config.ts  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx
app/api/faucet/: route.ts
app/api/health/: route.ts
app/auth/: page.tsx
app/dashboard/: error.tsx  loading.tsx  page.tsx
app/leaderboard/: error.tsx  loading.tsx  page.tsx
app/profile/: page.tsx
app/review/: error.tsx  loading.tsx  page.tsx
app/review/[jobId]/: page.tsx
app/submit/: error.tsx  loading.tsx  page.tsx
components/dev/: DevFaucet.tsx
components/layout/: AppShell.tsx  Sidebar.tsx  Topbar.tsx
components/reputation/: LeaderboardRow.tsx  ReputationBadge.tsx
components/review/: ConsensusBar.tsx  FindingForm.tsx  ReviewCard.tsx  ReviewQueue.tsx
components/staking/: StakeInput.tsx  TxStatusBanner.tsx
components/ui/: Badge.tsx  Button.tsx  Card.tsx  Modal.tsx  Spinner.tsx  Toast.tsx  Tooltip.tsx
components/wallet/: AccountSelector.tsx  WalletButton.tsx
context/: ApiContext.tsx  AuthContext.tsx  Providers.tsx  ToastContext.tsx  WalletContext.tsx
contract-rust/: Cargo.toml
contract-rust/escrow/: Cargo.toml  lib.rs
contract-rust/reputation/: Cargo.toml  lib.rs
contract-rust/review_engine/: Cargo.toml  lib.rs
hooks/: useApi.ts  useBalance.ts  useEscrow.ts  useJob.ts  useLeaderboard.ts  useReputation.ts  useReviewEngine.ts  useReviewQueue.ts  useTxBuilder.ts
lib/: constants.ts  format.ts  mock-data.ts  supabase.ts
public/abi/: escrow.json  reputation.json  review_engine.json
services/: api.service.ts  contract.service.ts  escrow.service.ts  reputation.service.ts  reviewEngine.service.ts
types/: api.types.ts  auth.types.ts  reputation.types.ts  review.types.ts  staking.types.ts
